App To Do's finalziada

--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
 <ul class="todo-list">
-  @for (todo of todos; track todo.id) {
+  @for (todo of todos | filtroTodo:filtroActual; track todo.id) {
     <todo-item [todo]="todo"/>
   }
 </ul>
