--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -13,5 +13,5 @@
     }
   </ul>
 
-  <button class="clear-completed">Limpiar completados</button>
+  <button (click)="limpiarCompletados()" class="clear-completed">Limpiar completados</button>
 </footer>
